--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,24 @@
 runtime: nodejs10
 
+manual_scaling:
+  instances: 1
+
 handlers:
 - url: /
   static_files: static/index.html
   upload: static/index.html
 
-- url: /.*
-  script: auto
+
+env_variables:
+  SQL_USER: root
+  SQL_PASSWORD: root
+  SQL_DATABASE: weatherReport  
+  INSTANCE_CONNECTION_NAME: meli-challenge-eu:europe-west2:meli-challenge-db2
+
+# [END gae_flex_mysql_env]
+
+beta_settings:
+  # The connection name of your instance, available by using
+  # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
+  # the Instance details page in the Google Cloud Platform Console.
+  cloud_sql_instances: meli-challenge-eu:europe-west2:meli-challenge-db2
