--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "gonzalo damiano",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/debug-agent": "^4.0.3",
     "@types/express": "^4.17.1",
     "@types/node-schedule": "^1.2.4",
     "express": "^4.17.1",
+    "knex": "^0.19.4",
     "mysql": "^2.17.1",
     "node-schedule": "^1.3.2",
     "reflect-metadata": "^0.1.13",
