--- a/app.yaml
+++ b/app.yaml
@@ -4,21 +4,24 @@ manual_scaling:
   instances: 1
 
 handlers:
+- url: /favicon.ico
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
+
 - url: /
   static_files: static/index.html
   upload: static/index.html
 
 
 env_variables:
-  SQL_USER: root
-  SQL_PASSWORD: root
-  SQL_DATABASE: weatherReport  
-  INSTANCE_CONNECTION_NAME: meli-challenge-eu:europe-west2:meli-challenge-db2
+  SQL_USER: "USERNAME"
+  SQL_PASSWORD: "PASSWORD"
+  SQL_DATABASE: "DATABASE"  
+  INSTANCE_CONNECTION_NAME: "INSTANCE"
 
 # [END gae_flex_mysql_env]
 
 beta_settings:
   # The connection name of your instance, available by using
-  # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
-  # the Instance details page in the Google Cloud Platform Console.
-  cloud_sql_instances: meli-challenge-eu:europe-west2:meli-challenge-db2
+  # 'gcloud beta sql instances describe [INSTANCE_NAME]'.
+  cloud_sql_instances: "INSTANCE"
