--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,14 +1,15 @@
 {
   "name": "default",
   "type": "mysql",
-  "host": "HOST",
-  "PORT": 3306,
-  "username": "USERNAME",
-  "password": "PASSWORD",
-  "database": "DATABASE",
+  "extra": {
+    "socketPath": "/cloudsql/meli-challenge-eu:europe-west2:meli-challenge-db2"
+  },
+  "username": "root",
+  "password": "root",
+  "database": "weatherReport",
   "synchronize": true,
   "logging": false,
   "entities": [
-    "./build/src/models/**.js"
+    "./build/models/**.js"
   ]
 }
