--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,14 +1,16 @@
 {
   "name": "default",
   "type": "mysql",
-  "host": "HOST",
-  "PORT": 3306,
-  "username": "USERNAME",
-  "password": "PASSWORD",
-  "database": "DATABASE",
+
+  "host": "localhost",
+  "port": 3306,
+  "username": "root",
+  "password": "localhost",
+  "database": "sampledb",
+
   "synchronize": true,
   "logging": false,
   "entities": [
-    "./build/src/models/**.js"
+    "./build/src/models/*.js"
   ]
 }
